--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "CuaHangVang/test",
         "pure_java_project/review/Access_ Control/bai2",
         "pure_java_project/review/Access_ Control/bai3",
-        "pure_java_project/review/Access_ Control/bai4"
+        "pure_java_project/review/Access_ Control/bai4",
+        "pure_java_project/review/Access_ Control/bai5"
     ],
     "java.project.referencedLibraries": [],
     "java.debug.settings.onBuildFailureProceed": true
