--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "pure_java_project/review/Access_ Control/bai2",
         "pure_java_project/review/Access_ Control/bai3",
         "pure_java_project/review/Access_ Control/bai4",
-        "pure_java_project/review/Access_ Control/bai5"
+        "pure_java_project/review/Access_ Control/bai5",
+        "pure_java_project/review/Access_ Control/bai6"
     ],
     "java.project.referencedLibraries": [],
     "java.debug.settings.onBuildFailureProceed": true
