--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,19 @@
 {
     "java.project.sourcePaths": [
-        "pure_java_project/review/Access_ Control/bai7",
-        "pure_java_project/review/Access_ Control/bai6",
-        "pure_java_project/review/Access_ Control/bai5",
-        "pure_java_project/review/Access_ Control/bai4",
-        "pure_java_project/review/Access_ Control/bai3",
-        "pure_java_project/review/Access_ Control/bai2",
-        "CuaHangVang/test",
-        "CuaHangVang/src",
         "CuaHangVang/review",
+        "CuaHangVang/src",
+        "CuaHangVang/test",
+        "goldshop",
         "goldshop/src",
-        "goldshop"
+        "pure_java_project",
+        "pure_java_project/review/Access_ Control/bai2",
+        "pure_java_project/review/Access_ Control/bai3",
+        "pure_java_project/review/Access_ Control/bai4",
+        "pure_java_project/review/Access_ Control/bai5",
+        "pure_java_project/review/Access_ Control/bai6",
+        "pure_java_project/review/Access_ Control/bai7",
+        "pure_java_project/model/test",
+        "pure_java_project/model/baitap"
     ],
     "java.project.referencedLibraries": [],
     "java.debug.settings.onBuildFailureProceed": true
