--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,12 @@
 {
     "java.project.sourcePaths": [
-        "goldshop",
-        "goldshop/src",
         "pure_java_project/review/Access_ Control/bai2",
         "pure_java_project/review/Access_ Control/bai3",
         "pure_java_project/review/Access_ Control/bai4",
         "pure_java_project/review/Access_ Control/bai5",
         "pure_java_project/review/Access_ Control/bai6",
         "pure_java_project/review/Access_ Control/bai7",
-        "goldshop/test",
-        "pure_java_project/src",
-        "pure_java_project",
-        "pure_java_project/Test"
+        "goldshop/src"
     ],
     "java.project.referencedLibraries": [],
     "java.debug.settings.onBuildFailureProceed": true
