--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
         "pure_java_project/review/Access_ Control/bai7",
         "goldshop/src",
         "goldshop/test",
-        "pure_java_project/src"
+        "pure_java_project/src",
+        "goldshop"
     ],
     "java.project.referencedLibraries": [],
     "java.debug.settings.onBuildFailureProceed": true
